Type Script support and build stuff

--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "tetris-ts",
   "version": "0.0.1",
   "description": "This is a simple implementation of Tetris using TypeScript as a way for me to get familiar with TypeScript",
-  "main": "index.html",  
+  "main": "index.html",
   "author": "Mohamed Elsherif (bashmohandes@gmail.com)",
   "license": "MIT",
   "devDependencies": {
+    "browserify": "^14.0.0",
     "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^2.4.1",
     "gulp-typescript": "^3.1.4",
-    "typescript": "^2.1.6"
+    "gulp-uglify": "^2.0.1",
+    "gulp-util": "^3.0.8",
+    "tsify": "^3.0.1",
+    "typescript": "^2.1.6",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
   }
 }
