--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Mohamed Elsherif (bashmohandes@gmail.com)",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.18.7",
     "browserify": "^14.0.0",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.4.1",
