--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
     "files": [
-        "src/main.ts"
+        "src/main.ts",
+        "src/Models/Cell.ts"
     ],
     "compilerOptions": {
         "noImplicitAny": true,
-        "target": "es5"
-    }
+        "target": "es5",
+        "sourceMap": true
+    },
+    "compileOnSave": true
 }
